--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
     <link rel="stylesheet" href="media-queries.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -100,6 +101,15 @@
                             <i class="fa-solid fa-user-plus"></i>
                         </div>
                     </div>
+
+                    <div class="navicon border">
+                        <div class="flex" id="toggle">
+                            <p class="navcol">Theme</p>
+                            <!-- <i class="material-symbols-outlined"></i> -->
+                            <span class="material-symbols-outlined">dark_mode</span>
+                            <!-- </button> -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -119,7 +129,7 @@
             </div>
         </div>
 
-        <div class="main flex">
+        <div class="main">
 
             <!-- Card 1 -->
             <div class="hove">
@@ -127,12 +137,15 @@
                     <div class="image">
                         <img src="images/Macbook_Pro_Open_Front_R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>MacBook Air</h1>
-                    </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>MacBook Air</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -143,12 +156,15 @@
                     <div class="image">
                         <img src="images/Airpods_3__R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>Airpods</h1>
-                    </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Airpods</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -159,12 +175,15 @@
                     <div class="image">
                         <img src="images/Apple_Watches_Linked_R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>Apple Watch</h1>
-                    </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Apple Watch</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -175,29 +194,32 @@
                     <div class="image">
                         <img src="images/iPhone_Laying_R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>iPhone</h1>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>iPhone</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabonulla excepturi!</p>
+                        </div>
                     </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
-                    </div>
+
                 </div>
             </div>
-        </div>
-        <div class="main flex">
             <!-- Card 1 -->
             <div class="hove">
                 <div class="card">
                     <div class="image">
                         <img src="images/Apple_Pencil_Angled_R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>Apple Pencil</h1>
-                    </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Apple Pencil</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -208,13 +230,17 @@
                     <div class="image">
                         <img src="images/iPad_Laying_R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>iPad</h1>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>iPad</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
-                    </div>
+
                 </div>
             </div>
 
@@ -224,12 +250,15 @@
                     <div class="image">
                         <img src="images/Keyboard_R Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>Keyboard</h1>
-                    </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Keyboard</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -240,13 +269,17 @@
                     <div class="image">
                         <img src="images/Mouse_L Shadowless.png" class="m" alt="">
                     </div>
-                    <div class="heading">
-                        <h1>Mouse</h1>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Mouse</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
                     </div>
-                    <div class="dis">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo nulla
-                            excepturi!</p>
-                    </div>
+
                 </div>
             </div>
 
@@ -256,6 +289,13 @@
     <footer>
 
     </footer>
+
+    <script>
+        const toggleBtn = document.getElementById('toggle');
+        toggleBtn.onclick = () => {
+            document.body.classList.toggle('dark');
+        }
+    </script>
 </body>
 
 </html>
