--- a/index.html
+++ b/index.html
@@ -105,11 +105,10 @@
                     <div class="navicon border">
                         <div class="flex" id="toggle">
                             <p class="navcol">Theme</p>
-                            <!-- <i class="material-symbols-outlined"></i> -->
                             <span class="material-symbols-outlined">dark_mode</span>
-                            <!-- </button> -->
                         </div>
-                    </div>
+                    </div> 
+               
                 </div>
             </div>
         </nav>
@@ -119,7 +118,7 @@
         <div class="newLaunch flex">
             <img src="images/NewLaunch.png" class="ban" alt="">
             <div class="lau">
-                <p class="p">#NEW LAUNCHS</p>
+                <p class="p">#NEW LAUNCHES</p>
             </div>
             <div class="hit">
                 <p>Hit 'Notify Me' &</p>
@@ -205,6 +204,7 @@
 
                 </div>
             </div>
+
             <!-- Card 1 -->
             <div class="hove">
                 <div class="card">
@@ -223,7 +223,7 @@
                     </div>
                 </div>
             </div>
-
+       
             <!-- Card 2 -->
             <div class="hove">
                 <div class="card">
@@ -296,6 +296,7 @@
             document.body.classList.toggle('dark');
         }
     </script>
+
 </body>
 
 </html>
