updated image path

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <main>
 
         <div class="newLaunch flex">
-            <img src="images/NewLaunch.png" class="ban" alt="">
+            <img src="images/newlaunch.png" class="ban" alt="">
             <div class="lau">
                 <p class="p">#NEW LAUNCHES</p>
             </div>
