--- a/index.html
+++ b/index.html
@@ -1,1 +1,302 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>GADGETZONE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
+    <link rel="stylesheet" href="media-queries.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+</head>
+
+<body>
+    <header>
+        <nav>
+            <div class="navbar flex">
+
+                <div class="div-logo" <a href="index.html">
+                    <img src="images/logo.png" class="logo" alt="">
+                    </a>
+                </div>
+
+                <div class="div-nav-icon flex">
+                    <div class="navicon border">
+                        <div class="flex">
+                            <p class="navcol">Macbook</p>
+                            <i class="fa-solid fa-laptop-code"></i>
+                        </div>
+                    </div>
+
+                    <div class="navicon border">
+                        <div class="flex">
+                            <p class="navcol">iPhone</p>
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                        </div>
+                    </div>
+
+                    <div class="navicon border">
+                        <div class="flex">
+                            <p class="navcol">iPad</p>
+                            <i class="fa-solid fa-tablet-button"></i>
+                        </div>
+                    </div>
+
+                    <div class="navicon border">
+                        <div class="flex">
+                            <p class="navcol">Airpods</p>
+                            <i class="fa-solid fa-headphones" ;"></i>
+                        </div>
+                    </div>
+
+                    <div class="navicon border">
+                        <div class="flex">
+                            <p class="navcol">More</p>
+                            <i class="fa-solid fa-circle-chevron-down"></i>
+                        </div>
+                    </div>
+                    <!-- <div class="navicon border">
+                    <div class="flex">
+                        <p class="navcol">Watch</p>
+                        <i class="fa-solid fa-clock"></i>
+                    </div>
+                </div>
+
+                <div class="navicon border">
+                    <div class="s">
+                        <p class="navcol">Mouse</p>
+                        <i class="fa-solid fa-computer-mouse"></i>
+                    </div>
+                </div>
+
+
+                <div class="navicon border">
+                    <div class="s">
+                        <p class="navcol">Keyboard</p>
+                        <i class="fa-regular fa-keyboard"></i>
+                    </div>
+                </div>
+
+                <div class="navicon border">
+                    <div class="s">
+                        <p class="navcol">Pencil</p>
+                        <i class="fa-solid fa-pencil""></i>
+                    </div>
+                </div> -->
+                </div>
+
+                <div class="div-login flex">
+                    <div class=" navicon border">
+                        <div class="flex">
+                            <p class="navcol">Login</p>
+                            <i class="fa-solid fa-right-to-bracket"></i>
+                        </div>
+                    </div>
+
+                    <div class="navicon border">
+                        <div class="flex">
+                            <p class="navcol">Sign-Up</p>
+                            <i class="fa-solid fa-user-plus"></i>
+                        </div>
+                    </div>
+
+                    <div class="navicon border">
+                        <div class="flex" id="toggle">
+                            <p class="navcol">Theme</p>
+                            <span class="material-symbols-outlined">dark_mode</span>
+                        </div>
+                    </div> 
+               
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+        <div class="newLaunch flex">
+            <img src="images/newlaunch.png" class="ban" alt="">
+            <div class="lau">
+                <p class="p">#NEW LAUNCHES</p>
+            </div>
+            <div class="hit">
+                <p>Hit 'Notify Me' &</p>
+                <p>get a chance to win exciting prizes</p>
+
+                <button class="button">Notify Me</button>
+            </div>
+        </div>
+
+        <div class="main">
+
+            <!-- Card 1 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/Macbook_Pro_Open_Front_R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>MacBook Air</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/Airpods_3__R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Airpods</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/Apple_Watches_Linked_R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Apple Watch</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/iPhone_Laying_R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>iPhone</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabonulla excepturi!</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Card 1 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/Apple_Pencil_Angled_R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Apple Pencil</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       
+            <!-- Card 2 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/iPad_Laying_R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>iPad</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/Keyboard_R Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Keyboard</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="hove">
+                <div class="card">
+                    <div class="image">
+                        <img src="images/Mouse_L Shadowless.png" class="m" alt="">
+                    </div>
+                    <div class="bor">
+                        <div class="heading">
+                            <h1>Mouse</h1>
+                        </div>
+                        <div class="dis">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut blanditiis dicta explicabo
+                                nulla
+                                excepturi!</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <script>
+        const toggleBtn = document.getElementById('toggle');
+        toggleBtn.onclick = () => {
+            document.body.classList.toggle('dark');
+        }
+    </script>
+
+</body>
+
+</html>
