--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <div class="navicon border">
                         <div class="flex">
-                            <a href="#More1">
+                            <a href="more.html">
                                 <p class="navcol">More</p>
                             </a>
                             <a href="#More1"><i class="fa-solid fa-circle-chevron-down"></i></a>
@@ -75,15 +75,15 @@
                 <div class="div-login flex">
                     <div class=" navicon border">
                         <div class="flex">
-                            <p class="navcol">Login</p>
-                            <i class="fa-solid fa-right-to-bracket"></i>
+                            <a href="login.html"><p class="navcol">Login</p></a>
+                            <a href="login.html"><i class="fa-solid fa-right-to-bracket"></i></a>
                         </div>
                     </div>
 
                     <div class="navicon border">
                         <div class="flex">
-                            <p class="navcol">Sign-Up</p>
-                            <i class="fa-solid fa-user-plus"></i>
+                            <a href="signUp.html"><p class="navcol">Sign-Up</p></a>
+                            <a href="signUp.html"><i class="fa-solid fa-user-plus"></i></a>
                         </div>
                     </div>
 
@@ -664,7 +664,36 @@
     </main>
 
     <footer>
-
+        <div class="footer">
+            <div class="container">
+                <div class="col1">
+                    <img class="col1_img" src="images/DSC00214.JPG" alt="">
+                    <h2 class="col1_h2">Anmol</h2>
+                    <div>
+                        <a href="https://instagram.com/an_mo__l"><i class="fab fa-instagram"></i></a>
+                        <a href="https://twitter.com/Anmol_279"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/anmol8627"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Anmol8604"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="col2">
+                    <a href="aboutUs.html"><h2 class="h2">About</h2></a>
+                    <a href="">Contact Us</a>
+                    <a href="">About Us</a>
+                    <a href="">Tern of Use</a>
+                    <a href="">Return Policy</a>
+                    <a href="">Privacy Policy</a>
+                </div>
+                <div class="col3">
+                    <a href="help.html"><h2 class="h2">Help</h2></a>
+                    <a href="">Payment</a>
+                    <a href="">Shipping</a>
+                    <a href="">Cancellation</a>
+                    <a href="">FAQ</a>
+                    <a href="">Report</a>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script>
