--- a/login.html
+++ b/login.html
@@ -114,10 +114,10 @@
                         <h1 class="form">Login</h1>
                     </div>
                     <div>
-                        <p class="signG">Sign in with Google</p>
+                        <p class="signG">Sign in with Google &nbsp; <i class="fa-brands fa-google"></i></p>
                     </div>
                     <div>
-                        <p class="signG">Sign in with Github</p>
+                        <p class="signG">Sign in with Github &nbsp;<i class="fa-brands fa-github"></i></p>
                     </div>
                     <p style="text-align: center;">Or</p>
                     <div class="form">
@@ -129,6 +129,8 @@
                             <div><input class="password in" type="password" name="password" placeholder="Password"
                                     required class="in"></div>
                             <div class="hii"><input class="submit" type="submit" value="Login" class="but"></div>
+                            <p>Forgot <a href="" class="ln">Password ?</a></p>
+                            <p>Don't have an acount <a class="ln" href="signUp.html">Sign Up</a></p>
                         </form>
                     </div>
                 </div>
